[bugfix] properly align account buttons

--- a/app/javascript/flavours/glitch/styles/components/accounts.scss
+++ b/app/javascript/flavours/glitch/styles/components/accounts.scss
@@ -552,7 +552,7 @@
     &__buttons {
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: 5px;
       padding-top: 55px;
       overflow: hidden;
 
@@ -566,10 +566,16 @@
       }
 
       .icon-button {
-        border: 1px solid lighten($ui-base-color, 12%);
-        border-radius: 4px;
-        box-sizing: content-box;
-        padding: 2px;
+        padding: 6px;
+        border: 1px solid var(--color-accent-lines);
+        border-radius: var(--button-border-radius);
+        color: var(--color-accent-fg);
+        background: var(--color-accent-bg);
+      }
+
+      .gts-icon {
+        --size: 24px;
+        display: block;
       }
     }
 
